# cpp-crossplatform-app

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
scripts/: find_boost_mac.sh
src/: CMakeCache.txt  Makefile  boost_test  cmake_install.cmake  main  main.cpp
tests/: catch2_test.cpp  gtest_test.cpp
